[package]
name = "fin-data-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "*"
warp="*"
serde_json = "*"
url = "*"
tokio = {version = "*", features = ["rt", "rt-multi-thread", "macros"]}
futures = "*"
serde = { version="*", features = ["derive"] }
redis = "*"
tokio-rusqlite = "*"